<resources>
    <string name="app_name">WaterWise</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- System Screen strings -->
    <string name="system_heading">Current System Status:</string>
    <string name="system_power">System Power:</string>
    <string name="lighting_power">Lighting Power:</string>
    <string name="air_pump_power">Air Pump Power:</string>
    <string name="water_pump_power">Water Pump Power:</string>

    <string name="power_options_heading">Power Control Options</string>
    <string name="option_all_heading">System</string>
    <string name="option_lighting_heading">Lighting</string>
    <string name="option_air_pump_heading">Air Pump</string>
    <string name="option_water_pump_heading">Water Pump</string>
    <string name="btn_set_power_options">Done</string>
    <string name="btn_power_option_cancel">Cancel</string>

    <!-- Settings screen strings -->
    <string name="application_settings">Application Settings</string>
    <string name="enable_notifications">Enable Push Notifications</string>
    <string name="about_heading">About</string>

    <!-- Welcome screen and log in strings -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="err_msg_email">Please enter a valid email address</string>
    <string name="err_msg_password">Please enter a password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_sign_out">Sign Out</string>

    <!-- Account screen strings -->
    <string name="reset_password">Reset Password</string>
    <string name="update_account">Account Information</string>
    <string name="update_system"> System Information</string>
    <string name="email_unchanged">(Email Unchanged)</string>
    <string name="ip_unchanged">(IP Unchanged)</string>
    <string name="port_unchanged">(Port Unchanged)</string>
    <string name="update">Update</string>
    <string name="err_msg_ip">Please enter a valid IP address</string>

    <!-- Plant info screen strings -->
    <string name="plant_info_heading">No Plant Selected</string>
    <string name="plant_info_description">Plant description will show here</string>
    <string name="plant_search_heading">Search For Plants</string>
    <string name="plant_results_heading">Search Results</string>
    <string name="hint_search">Search</string>
    <string name="btn_search">Search</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_set_plant">Set as current plant</string>

    <!-- Sensor screen strings -->
    <string name="instructions">Pull Down to Refresh</string>
    <string name="default_reading">Sensor Value</string>
    <string name="timestamp">Timestamp</string>
    <string name="ph_sensor_heading">PH</string>
    <string name="ec_sensor_heading">Electrical Conductivity</string>
    <string name="water_temp_sensor_heading">Water Temperature</string>
    <string name="water_level_sensor_heading">Water Level</string>
    <string name="humidity_sensor_heading">Humidity</string>
    <string name="air_temp_sensor_heading">Air Temperature</string>

    <!-- Help screen strings -->
    <string name="btn_more">More FAQs Online</string>
    <string name="support_heading">Support Information</string>
    <string name="support_body">For support, please contact us at:</string>
    <string name="support_email">support.Hydrocoolapp@gmail.com</string>
    <string name="faq">Frequently Asked Questions</string>

    <string name="faq_1">Will WaterWise work without this mobile application?</string>
    <string name="ans_1">Yes, the system is fully functional on its own. However,
        you will have to mix the nutrients into the reservoir manually.</string>

    <string name="faq_2">Is the system safe to use outdoors?</string>
    <string name="ans_2">Yes, WaterWise is designed to be used both indoors and outdoors.</string>

    <string name="faq_3">How often should I drain the system?</string>
    <string name="ans_3">Please refer to the Plant Information screen for your plant.</string>

    <string name="faq_4">How do I refresh the sensor readings?</string>
    <string name="ans_4">Drag down to refresh the sensor readings.</string>

    <!-- About screen strings -->
    <string name="developer_name">Hydrocoolapps</string>
    <string name="developer_contact">Hydrocoolapp@gmail.com</string>

    <!-- Navigation items -->
    <string name="nav_item_account">Account</string>
    <string name="nav_item_system">System</string>
    <string name="nav_item_plant_info">Plants</string>
    <string name="nav_item_sensors">Sensors</string>
    <string name="nav_item_help">Help</string>
    <string name="nav_item_settings">Settings</string>

    <!-- Navigation drawer labels -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_system</item>
        <item>@string/nav_item_plant_info</item>
        <item>@string/nav_item_sensors</item>
        <item>@string/nav_item_account</item>
        <item>@string/nav_item_settings</item>
        <item>@string/nav_item_help</item>
    </string-array>

    <!-- Title strings for Views -->
    <string name="title_account">Account</string>
    <string name="title_system">System</string>
    <string name="title_plant_info">Plant Information</string>
    <string name="title_sensors">Sensors</string>
    <string name="title_help">Help</string>
    <string name="title_settings">Settings</string>
    <string name="title_welcome">Welcome</string>

</resources>
