<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor">

    <android.support.v7.widget.CardView
        android:id="@+id/container_faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:cardElevation="@dimen/default_card_elevation"
        app:cardCornerRadius="@dimen/default_card_corner_radius"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/faq_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/faq"
                android:textStyle="bold"
                android:textSize="@dimen/subheading_size"/>

            <TextView
                android:id="@+id/faq_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/faq_1"
                android:textStyle="bold"
                android:textSize="@dimen/body_size"/>

            <TextView
                android:id="@+id/ans_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/ans_1"
                android:textSize="@dimen/body2_size"/>

            <TextView
                android:id="@+id/faq_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/faq_2"
                android:textStyle="bold"
                android:textSize="@dimen/body_size"/>

            <TextView
                android:id="@+id/ans_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/ans_2"
                android:textSize="@dimen/body2_size"/>

            <TextView
                android:id="@+id/faq_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/faq_3"
                android:textStyle="bold"
                android:textSize="@dimen/body_size"/>

            <TextView
                android:id="@+id/ans_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/ans_3"
                android:textSize="@dimen/body2_size"/>

            <TextView
                android:id="@+id/faq_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/faq_4"
                android:textStyle="bold"
                android:textSize="@dimen/body_size"/>

            <TextView
                android:id="@+id/ans_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/ans_4"
                android:textSize="@dimen/body2_size"/>

            <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/btn_more"
                android:textSize="@dimen/button_text_size"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/container_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_below="@id/container_faq"
        app:cardElevation="@dimen/default_card_elevation"
        app:cardCornerRadius="@dimen/default_card_corner_radius"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/support_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/support_heading"
                android:textStyle="bold"
                android:textSize="@dimen/subheading_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/support_body"
                android:textStyle="bold"
                android:textSize="@dimen/body_size"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:text="@string/support_email"
                android:textSize="@dimen/body2_size"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:autoLink="email"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>