<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/default_padding"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >

    <TextView
        android:id="@+id/plant_search_heading"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:textSize="@dimen/headline_size"
        android:textStyle="bold"
        android:text="@string/plant_search_heading"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/plant_search_heading" >

        <EditText
            android:id="@+id/input_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/hint_search"
            android:textSize="@dimen/subheading_size" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_search"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/colorPrimary"
        android:text="@string/btn_search"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/body_size" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_search"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/colorPrimary"
        android:text="@string/btn_cancel"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/body_size"
        />



</RelativeLayout>